just "isTyping"
