# server/api/DTOs/TypingRequest.cs
@@ -1,0 +1,6 @@
+﻿namespace api.DTOs;
+
+public class TypingRequest
+{
+    public string Username { get; set; }
+}
